# urban-sound-classifier-service

./: Dockerfile  README.md  development.Dockerfile  pyproject.toml  requirements-all.txt  requirements.txt
src/: main.py  model.pt  my_service.py
