[project]
name = "urban-sound-classifier" # Edit this and remove comment
version = "1.0.0"

requires-python = "==3.10"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "numpy==1.26.4",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "ipython==8.20.0",
    "soundata==1.0.1"

]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
